sideBar的z-index fixed

--- a/neteaseMusic/src/assets/css/mixin.scss
+++ b/neteaseMusic/src/assets/css/mixin.scss
@@ -19,6 +19,7 @@
   display: flex;
   display: -webkit-flex;
   display:-ms-flexbox;
+  flex-wrap: wrap;
 }
 
 @mixin transition($type,$time,$func){
