--- a/neteaseMusic/src/components/menu/menu.scss
+++ b/neteaseMusic/src/components/menu/menu.scss
@@ -7,6 +7,7 @@
   right: 0;
   will-change: transform;
   height: 100vh;
+  
   &-mask{
     position: absolute;
     top: 0;
@@ -26,6 +27,7 @@
     @include bg-color(#fff);
     font-size: .427rem;
     transform: translate3d(-100%,0,0);
+
     @include  transition(all,.2s,ease-out);
 
     .menu-title{
@@ -44,11 +46,28 @@
   }
 
   &-open{
+    z-index: 1;
     .menu-mask{
       @include bg-color(rgba(0,0,0,.4));
     }
     .menu-content{
       transform: translate3d(0,0,0);
+    }
+  }
+
+  &-close{
+    animation: coverdown .2s ease;
+    animation-fill-mode:forwards;
+  }
+  @keyframes coverdown {
+    0%{
+      z-index: 1;
+    }
+    90%{
+      z-index: 1;
+    }
+    100%{
+      z-index: -1;
     }
   }
 }
